--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
+  padding-top: 36px;
   text-align: center;
+}
+.SearchForm-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
 }
