--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,38 @@
 .App {
-  padding-top: 36px;
   text-align: center;
+  padding-top: 36px;
 }
 .SearchForm-wrapper {
   display: flex;
   justify-content: center;
   margin-bottom: 1.5rem;
+}
+.Container-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.Container-item {
+  width: 48%;
+  margin-bottom: 1.5rem;
+}
+.Container-detail {
+  padding-top: 1rem;
+  margin: 0 auto;
+  width: 50%;
+}
+.btn {
+  text-align: right;
+  margin-bottom: 1rem;
+}
+@media screen and (min-width: 768px) {
+  .Container-item {
+    width: 33%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .Container-item {
+    width: 24%;
+  }
 }
